k8s/platform/clickhouse/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: clickhouse-ui
  labels:
    app.kubernetes.io/name: clickhouse-server
spec:
  ports:
    - port: 8123
      targetPort: 8123
      name: http
  selector:
    app.kubernetes.io/name: clickhouse-server
