k8s/platform/clickhouse/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clickhouse
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "ClickHouse"
    gethomepage.dev/description: "Data Warehouse"
    gethomepage.dev/group: "Storage"
    gethomepage.dev/icon: "sh-clickhouse.png"
    gethomepage.dev/weight: "5"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=clickhouse-server"
spec:
  rules:
    - host: &host "clickhouse.mdeleon.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clickhouse-ui
                port:
                  number: 8123
  tls:
    - secretName: clickhouse-tls-cert
      hosts:
        - *host
